--- a/style.css
+++ b/style.css
@@ -17,15 +17,14 @@ header {
 }
 
 .header-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    /* optional: makes it circular */
-    margin-right: 10px;
-    /* optional: spacing from text */
+    width: 36px;
+    height: auto;
+    /* maintain aspect ratio */
     vertical-align: middle;
-    /* aligns with text */
+    margin-right: 10px;
 }
+
+
 
 
 nav {
